--- a/portfolio/templates/portfolio/mutualfund_list.html
+++ b/portfolio/templates/portfolio/mutualfund_list.html
@@ -1,5 +1,6 @@
 {% extends 'portfolio/base.html' %}
 {% block content %}
+    <!DOCTYPE html>
     <html>
     <head>
         <meta charset="UTF-8">
@@ -25,33 +26,31 @@
         </div>
     </div>
     <div class="row">
-        <h2 style="padding-left: 15Px">Stocks Information</h2>
+        <h2 style="padding-left: 15Px">Mutual Funds Information</h2>
     </div>
     <div>
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
-                <th>Customer number</th>
-                <th>Symbol</th>
-                <th>Name</th>
-                <th>Shares</th>
+                <th>Customer</th>
+                <th>Type</th>
+                <th>Share Class</th>
                 <th>Purchase Price</th>
                 <th>Purchase Date</th>
                 <th colspan="3">Actions</th>
             </tr>
             </thead>
             <tbody>
-            {% for stock in stocks %}
+            {% for mutualfund in mutualfunds %}
                 <tr>
-                    <td>{{ stock.customer }}</td>
-                    <td>{{ stock.symbol }}</td>
-                    <td>{{ stock.name }}</td>
-                    <td>{{ stock.shares }}</td>
-                    <td>{{ stock.purchase_price }}</td>
-                    <td>{{ stock.purchase_date }}</td>
-                    <td><a href="{% url 'portfolio:stock_edit' pk=stock.pk %}"
+                    <td>{{ mutualfund.customer }}</td>
+                    <td>{{ mutualfund.type }}</td>
+                    <td>{{ mutualfund.share_class }}</td>
+                    <td>{{ mutualfund.purchase_price }}</td>
+                    <td>{{ mutualfund.purchase_date }}</td>
+                    <td><a href="{% url 'portfolio:mutualfund_edit' pk=mutualfund.pk %}"
                            class="btn btn-warning">Edit</a></td>
-                    <td><a href="{% url 'portfolio:stock_delete' pk=stock.pk %}"
+                    <td><a href="{% url 'portfolio:mutualfund_delete' pk=mutualfund.pk %}"
                            onclick="return confirm('Are you sure you want to delete?')"
                            class="btn btn-danger">Delete</a>
                     </td>
@@ -60,8 +59,8 @@
             </tbody>
         </table>
      <div class="row">
-            <a href="{% url 'portfolio:stock_new' %}" class="row"><span
-                    class="btn btn-primary">Add Stock</span></a>
+            <a href="{% url 'portfolio:mutualfund_new' %}" class="row"><span
+                    class="btn btn-primary">Add Mutual Fund</span></a>
         </div>
     </div>
     </body>
