--- a/portfolio/templates/portfolio/mutualfund_new.html
+++ b/portfolio/templates/portfolio/mutualfund_new.html
@@ -1,8 +1,8 @@
 {% extends 'portfolio/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <h1>Add a New Investment</h1>
-    <form method="POST" class="investment-form">{% csrf_token %}
+    <h1>Add a New Mutual Fund</h1>
+    <form method="POST" class="mutualfund-form">{% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
