--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -30,7 +30,28 @@
     <div class="row">
         <h2 style="padding-left: 15Px">Customer Portfolio</h2>
     </div>
-
+	
+	
+	<div class="row">
+		<h2 style="padding-left: 15Px">Overall Portfolio Performance</h2>
+	</div>
+	<div>
+		<table class="table table-striped table-bordered table-hover">
+			<thead>
+			    <tr class="bg-info">
+			        <th>Portfolio Initial Investments</th>
+			        <th>Portfolio Current Investments</th>
+			        <th>Grand Total Results</th>
+			    </tr>
+			</thead>
+			<tbody>
+				<td>{{ overall_initial }}</td>
+				<td>{{ overall_current }}</td>
+				<td>{{ overall_current|sub:overall_initial }}</td>
+			</tbody>
+	</div>
+	
+	
     <div class="row">
         <h2 style="padding-left: 15Px">Stocks Information</h2>
     </div>
@@ -42,8 +63,11 @@
 	    		<th>Symbol</th>
 		    	<th>Name</th>
 			    <th>Shares</th>
-    			<th>Purchase Price</th>
-	    		<th>Purchase Date</th>
+				<th>Initial Stock Price</th>
+				<th>Initial Stock Value</th>
+				<th>Current Stock Price</th>
+				<th>Current Stock Value</th>
+				<th>Results</th>
             </tr>
             </thead>
             <tbody>
@@ -53,8 +77,11 @@
 			    	<td>{{ stock.symbol }}</td>
 				    <td>{{ stock.name }}</td>
     				<td>{{ stock.shares }}</td>
-	    			<td>{{ stock.purchase_price }}</td>
-		    		<td>{{ stock.purchase_date }}</td>
+					<td>{{ stock.shares }}</td>
+					<td>{{ stock.initial_stock_value }}</td>
+					<td>{{ stock.current_stock_price|floatformat:2 }}</td>
+					<td>{{ stock.current_stock_value|floatformat:2 }}</td>
+					<td>{{ stock.current_stock_value|sub:stock.initial_stock_value|floatformat:2 }}</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -75,6 +102,7 @@
     			<th>Acquired Date</th>
 	    		<th>Recent Value</th>
 		    	<th>Recent Date</th>
+				<th>Results</th>
             </tr>
             </thead>
             <tbody>
@@ -87,10 +115,29 @@
 	    			<td>{{ investment.acquired_date }}</td>
 		    		<td>{{ investment.recent_value }}</td>
 			    	<td>{{ investment.recent_date }}</td>
+					<td>{{ investment.results_by_investment }}</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
+		<table class="table table-striped table-bordered table-hover">
+			<thead>
+			<tr class="bg-info">
+
+				<th>Total of Initial Investments</th>
+				<th>Total of Current Investments</th>
+				<th>Results</th>
+
+			</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>{{ acquired_value }}</td>
+					<td>{{ recent_value }}</td>
+					<td>{{ recent_value|sub:acquired_value}}</td>
+				</tr>
+			</tbody>
+		</table>
     </div>
 
     <div class="row">
